--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                </nav> 
                <div class="fork-me-wrapper">
                  <div class="fork-me">
-                   <a class="fork-me-link" href="https://github.com/AkshayAgarwal007/Jekyll-Mono">
+                   <a class="fork-me-link" href="https://github.com/kapziel">
                    <span class="fork-me-text">Fork Me On GitHub</span>
                    </a>
                  </div>
